--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,12 @@ beautifulsoup4==4.12.3
 blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+cloud-sql-python-connector==1.9.2
 colorama==0.4.6
+cryptography==42.0.7
 distro==1.9.0
 Flask==3.0.3
 Flask-Cors==4.0.1
@@ -41,6 +44,7 @@ proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
 PyMySQL==1.1.0
